--- a/config.yml.sample
+++ b/config.yml.sample
@@ -2,6 +2,7 @@ general:
   loglevel: INFO
   token: 0000000000:xxxxxxxxxxxxxxxxxxxxxxx
 #  tgapi: http://localhost:4200/bot{0}/{1}
+#  threads: 2
 netease:
   neteaseapi: https://netease-nodejs.vercel.app
   userid: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
