add: support for flac files add: caching module fix: various bugs

--- a/config.yml.sample
+++ b/config.yml.sample
@@ -7,3 +7,4 @@ netease:
   neteaseapi: https://netease-nodejs.vercel.app
   userid: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
   tmpdir: ./tmp/
+  cached: True
