refactor: organize modules and file structures Squashed commit of the following:
commit dd415984e4b77391b91dd1e93eb31621ac1596db
Author: Holger Huo <holgerhuo@outlook.com>
Date:   Tue Mar 29 16:54:38 2022 +0800

    fix: ext double dot

commit 85005ee6b30661f9e25f786b6df951d449b68f19
Author: Holger Huo <holgerhuo@outlook.com>
Date:   Tue Mar 29 16:50:18 2022 +0800

    fix: reference error for `id`

commit 1e82e1f535ae802b83f3095d2a731ea5f60579a8
Author: Holger Huo <holgerhuo@outlook.com>
Date:   Tue Mar 29 16:33:52 2022 +0800

    fix: check path error and jpg cannot be saved

commit a8bfd0a2658e34b5a0c44f758dfd7deb366cfd92
Author: Holger Huo <holgerhuo@outlook.com>
Date:   Tue Mar 29 16:23:42 2022 +0800

    fix: mimetype error

commit 00005e7c7c846070b56fe8d3b9858d68fdc58ad2
Author: Holger Huo <holgerhuo@outlook.com>
Date:   Tue Mar 29 15:35:51 2022 +0800

    fix: auto create directories

commit c527a1953c913c4973ef52ee4b884ee903b401a9
Author: Holger Huo <holgerhuo@outlook.com>
Date:   Tue Mar 29 15:29:23 2022 +0800

    fix: album and import bug

commit a6e0d21f6e6273308ff53957011a4115834c4474
Author: Holger Huo <holgerhuo@outlook.com>
Date:   Tue Mar 29 15:15:59 2022 +0800

    refactor: organize code, modularize

commit f89abefd76b210f30b7bc0432f0165867589a104
Author: Holger Huo <holgerhuo@outlook.com>
Date:   Mon Mar 28 21:57:43 2022 +0800

    update: use `cloudsearch` api for better results

--- a/config.yml.sample
+++ b/config.yml.sample
@@ -1,10 +1,10 @@
 general:
   loglevel: INFO
   token: 0000000000:xxxxxxxxxxxxxxxxxxxxxxx
+  tmpdir: ./tmp/
+  threads: 2
 #  tgapi: http://localhost:4200/bot{0}/{1}
-#  threads: 2
 netease:
   neteaseapi: https://netease-nodejs.vercel.app
   userid: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-  tmpdir: ./tmp/
   cached: True
